--- a/Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html
+++ b/Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html
@@ -138,27 +138,27 @@ Destapa cañerias zona sur burzaco - Como destapar un inodoro tapado sin sopapa
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Plaza-de-las-estrellas.html">Plaza de las estrellas </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Servicio-Destapa-Cañerias.html">Servicio Destapa Cañerias </a> 
+       <a href="../Servicios/Repuesto-de-quemadores-para-parrillas-a-gas.html">Repuesto de quemadores para parrillas a gas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-A-Domicilio.html">Destapaciones A Domicilio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html">Destapacaños Cerca De Mi Ubicación </a> 
+       <a href="../Destapa-Cañerias/Plomero-Destapa-Cañerias.html">Plomero Destapa Cañerias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-Cañerias-Inodoro.html">Destapa Cañerias Inodoro </a> 
+       <a href="../Servicios/Productos-para-desatascar-tuberias.html">Productos para desatascar tuberias </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,57 +221,57 @@ Destapa cañerias zona sur burzaco - Como destapar un inodoro tapado sin sopapa
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Aguafuerte-para-desatascar-tuberias.html">Aguafuerte para desatascar tuberias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias-24hs.html">Destapaciones Emergencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones.html">Destapaciones </a> 
+       <a href="../Servicios/Aparato-Destapa-Cañerias-en-Palermo.html">Aparato Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
+       <a href="../Servicios/Como-se-puede-destapar-el-baño-sin-destapacaños.html">Como se puede destapar el baño sin destapacaños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-liquido-truper.html">Destapacaños liquido truper </a> 
+       <a href="../Servicios/En-que-objetos-se-encuentra-la-plata.html">En que objetos se encuentra la plata </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Baño.html">Destapador De Baño </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Mayoristas-en-zona-sur.html">Mayoristas en zona sur </a> 
+       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
+       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
+       <a href="../Servicios/Destapar-oreja-con-mocos.html">Destapar oreja con mocos </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-truper-para-taladro.html">Destapacaños truper para taladro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-liquido-home-depot.html">Destapacaños liquido home depot </a> 
+       <a href="../Servicios/Estructura-de-la-planta-de-maiz.html">Estructura de la planta de maiz </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-en-zona-norte.html">Destapaciones de cañerias en zona norte </a> 
+       <a href="../Destapa-Cañerias/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
